fix: don't !important overflow: auto

--- a/public/styles/helpers/_code.scss
+++ b/public/styles/helpers/_code.scss
@@ -46,7 +46,7 @@ pre code {
 
   pre {
     padding: $spacer-3 !important;
-    overflow: auto !important;
+    overflow: auto;
     font-size: 16px !important;
     line-height: 1.45 !important;
 
